--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -316,7 +316,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            {% include 'expert/layouts/comment.html' with comments=comment project_pk=project_pk %}
+                            {% include 'expert/layouts/comment.html' with comments=comments project_pk=project_pk %}
                         </div>
                     </div>
                 </div>
