--- a/static/researcher/css/style.css
+++ b/static/researcher/css/style.css
@@ -528,19 +528,19 @@ h6.project-title {
     margin-bottom: 15px;
 }
 
-span.border-span {
-    display: inline-block;
-    -webkit-border-radius: 0.25em;
-    -moz-border-radius: 0.25em;
-    border-radius: 0.25em;
-    border: 1px solid #bdbdbd;
-    padding: 2px 5px;
-    background-color: #F8FDF7;
-    color: #707070;
-    font-weight: 300;
-    font-size: 12px;
-    margin: 3px 5px;
-}
+/*span.border-span {*/
+/*    display: inline-block;*/
+/*    -webkit-border-radius: 0.25em;*/
+/*    -moz-border-radius: 0.25em;*/
+/*    border-radius: 0.25em;*/
+/*    border: 1px solid #bdbdbd;*/
+/*    padding: 2px 5px;*/
+/*    background-color: #F8FDF7;*/
+/*    color: #707070;*/
+/*    font-weight: 300;*/
+/*    font-size: 12px;*/
+/*    margin: 3px 5px;*/
+/*}*/
 
 /* show project style */
 .question-mark {
