debug select techniques in project_setting.html but still have some bugs! Hang Kardam :|

--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -67,12 +67,13 @@
                                     <span class="section-title">تکنیک های انتخاب شده</span>
                                     <div class="section">
                                         <label for="tags"></label>
-                                        <input name="techniques" id="tags" value="" class="w-100"/>
+                                        <input name="techniques" id="tags" value="" class="w-100 no-click"/>
                                     </div>
                                 </div>
                             </div>
 
                         </div>
+                        <button type="button" id="test-tag-input" class="btn btn-secondary">click me!</button>
                     </div>
 
                 </div>
