add link field to expert web scrapping process

--- a/expert/templates/expert/layouts/resume_validation.html
+++ b/expert/templates/expert/layouts/resume_validation.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h6 class="modal-title text-right" id="resumeValidationLabel">صحت سنجی</h6>
+                <h6 class="modal-title text-right default" id="resumeValidationLabel">صحت سنجی</h6>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-right">
@@ -25,7 +25,7 @@
                                 </div>
                                 <div class="pb-3">
                                     <span>دانشگاه</span>
-                                    <span>علوم پزشکی تهران</span>
+                                    <span id="expertUniDetected"></span>
                                 </div>
                                 <div>
                                     <span>گروه هیئت علمی</span>
