add userId to userInfo in researcher & expert.fix the show project

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -301,7 +301,7 @@
                     {#                            </div>#}
                     {#                        </div>#}
                     {#                    {% else %}#}
-                    {% for project in projects %}
+                    {% for project in allProjects %}
                         <div class="card box flow-root-display w-100">
                             <div class="box-header">
                                 <h6>
