--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -81,7 +81,17 @@
                                         <div class="col-lg-12">
                                             <div class="form-group form-group-auto-check">
                                                 <label for="userID">شناسه کاربری</label>
-                                                <input type="text" class="w-100" id="userID">
+                                                {% comment %} <input type="text" class="w-100" id="userID"> {% endcomment %}
+                                                {% if userId_error  %}
+                                                    {% render_field form.userId class+="error w-100" id="userID"%}
+                                                {% else %}
+                                                    {% render_field form.userId class+="w-100" id="userID"%}
+                                                {% endif %}
+                                                <div class="userId-error">
+                                                    <div class="error">
+                                                        {{ userId_error }}
+                                                    </div>
+                                                </div>
                                                 <div class="form-group__status">
                                                     <div class="success-status">
                                                         <i class="fas fa-check"></i>
