put some text in researcher question.html

--- a/researcher/templates/researcher/layouts/skip_question.html
+++ b/researcher/templates/researcher/layouts/skip_question.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h6 class="modal-title text-right" id="skipQuestionLabel">پریدن از این مرحله</h6>
+                <h6 class="modal-title text-right default" id="skipQuestionLabel">پریدن از این مرحله</h6>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -15,7 +15,7 @@
                         مرحله بگذرید.</p>
                     <div class="form-group text-center ml-auto mr-auto">
                         <label for="skipCode"></label>
-                        <input type="text" class="code-input text-center" name="accelerator" id="skipCode"
+                        <input type="text" class="code-input text-center w-100" name="accelerator" id="skipCode"
                                placeholder="123456" maxlength="6">
                         {#                        <input type="text" name="accelerator" value="      " id="skipCode" hidden>#}
                         {#                        <label class="c-digit-container text-center w-100">#}
