--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -68,6 +68,68 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-md-4">
+                            picture
+                        </div>
+                        <div class="col-md-8 text-right">
+                            <h6>نحوه پاسخ دهی</h6>
+                            <hr>
+                            <p style="text-align: right;">
+                                از هر داوطلب در انتهای مهلت تعیین شده چهار آیتم درخواست خواهد شد:
+                            </p>
+                            <p style="text-align: right;">
+                                الف) <strong>پاسخ نهایی به سوال</strong>
+                                : دانشجو پس از تحقیق و پژوهش در منابع به چه نتیجه ای رسیده است.
+                            </p>
+                            <p style="text-align: right;">
+                                ب)&zwnj; <strong>راهبرد جستجو</strong>
+                                : فرمول جستجوی فرد در موتور های جستجوی علمی.
+                            </p>
+                            <p style="text-align: right;">
+                                ج) <strong>توضیح اجرایی</strong>
+                                : نقشه یا مسیری که پژوهشگر برای جستجوی خود انتخاب کرده و همچنین مجموع فعالیت هایی که
+                                برای رسیدن به پاسخ انجام داده است.
+                            </p>
+                            <p style="text-align: right;">
+                                د) <strong>منابع مورد استفاده</strong>
+                                : منابع دست اول همچون مقالات، کتب مرجع و منابع میدانی که در پژوهش استفاده شده اند.
+                            </p>
+                            <p style="text-align: right;">
+                                بنابراین تنها معیار سنجش داوطلبان کیفیت علمی و محتوایی پاسخشان نیست و در کنار این مهم،
+                                استراتژی به کار گیری مهارت های پژوهشی و تلاش و جهد افراد در راستای رسیدن به پاسخ نیز
+                                مورد ارزیابی قرار می گیرد تا حقی از افراد ضایع نگردد.
+                            </p>
+                            <p style="text-align: right;">
+                                * داوطلب می بایست پاسخ همه ی آیتم ها را در قالب فایل Word و منابع و مقالات ارجاع داده
+                                شده را در قالب فایل Endnote در پنل کاربری خود بارگذاری کند.
+                            </p>
+                            <p style="text-align: right;">
+                                * متن فایل Word بایستی با فونت B Mitra و سایز 14 نوشته شود. عناوین نیز با همین مشخصات و
+                                به صورت Bold نوشته شوند.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8 text-right">
+                            <h6>نحوه امتیازدهی</h6>
+                            <hr>
+
+                            <p style="text-align: right;">
+                                به هرکدام از آیتم های ذکر شده توسط استاد نمره های a(عالی) &nbsp; &nbsp;b(قابل قبول)
+                                &nbsp; &nbsp;c(ضعیف) &nbsp; &nbsp;تعلق خواهد گرفت و در نهایت با بررسی کمیته آموزشی چمران
+                                تیم نتیجه قبولی یا عدم قبولی به داوطلب اعلام خواهد شد به این صورت که <u></u><strong><u>دریافت
+                                دو C</u></strong> به منزله مردودی خواهد بود.
+                            </p>
+                            <p style="text-align: right;">
+                                * داوطلب هایی که مردود اعلام می شوند می توانند <u>پس از 1 ماه</u> مجددا ا انتخاب سوال
+                                پژوهشی جدید برای عضویت اقدام نمایند.
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            picture
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-12 text-center">
                             <p>
                                 پیشنهاد می‌شود جهت یادگیری «نحوه جستجوی هدفمند مقالات در بانک مقالات» ویدیوی زیر را
