--- a/templates/registration/email_template.html
+++ b/templates/registration/email_template.html
@@ -38,12 +38,12 @@
               border-radius: 10px">
     <tr>
         <td style="padding: 10px">
-            <img src="http://chamranteam.ir/theme-ct/images/logo.png" alt="logo" height="70px">
+            <img src="http://chamranteam.ir/static/theme-ct/images/logo.png" alt="logo" height="70px">
         </td>
     </tr>
     <tr>
         <td style="padding: 30px 100px;background-color: #f7fdf8">
-            <img src="http://chamranteam.ir/theme-ct/images/email.png" alt="email Logo"/>
+            <img src="http://chamranteam.ir/static/theme-ct/images/email.png" alt="email Logo"/>
         </td>
     </tr>
     <tr>
@@ -95,22 +95,22 @@
     list-style: none;">
                 <li style="display: inline-block; margin: 10px">
                     <a href="https://www.instagram.com/chamran_team/" dideo-checked="true"><img
-                            src="http://chamranteam.ir/theme-ct/images/instagram.png" alt="instagram" width="24px"
+                            src="http://chamranteam.ir/static/theme-ct/images/instagram.png" alt="instagram" width="24px"
                             style="vertical-align: middle;border-radius: 3px"></a>
                 </li>
                 <li style="display: inline-block; margin: 10px">
                     <a href="https://t.me/chamran_team" dideo-checked="true"><img
-                            src="http://chamranteam.ir/theme-ct/images/telegram1.png" alt="telegram" width="24px"
+                            src="http://chamranteam.ir/static/theme-ct/images/telegram1.png" alt="telegram" width="24px"
                             style="vertical-align: middle;border-radius: 3px"></a>
                 </li>
                 <li style="display: inline-block; margin: 10px">
                     <a href="https://ble.im/chamran_team" dideo-checked="true"><img
-                            src="http://chamranteam.ir/theme-ct/images/bale.png" alt="Bale" width="24px"
+                            src="http://chamranteam.ir/static/theme-ct/images/bale.png" alt="Bale" width="24px"
                             style="vertical-align: middle;border-radius: 3px"></a>
                 </li>
                 <li style="display: inline-block; margin: 10px">
                     <a href="https://www.aparat.com/chamran_team" dideo-checked="true"><img
-                            src="http://chamranteam.ir/theme-ct/images/aparat.png" alt="aparat" width="24px"
+                            src="http://chamranteam.ir/static/theme-ct/images/aparat.png" alt="aparat" width="24px"
                             style="vertical-align: middle;border-radius: 3px"></a>
                 </li>
             </ul>
