--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -26,7 +26,7 @@
 {% block modals %}{% endblock %}
 <div class="modal fade" id="feedbackModal" data-backdrop="static" data-keyboard="false" tabindex="-1"
      role="dialog" aria-labelledby="feedbackModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="feedbackModalLabel">ثبت بازخورد</h5>
@@ -240,6 +240,8 @@
                     message: "بازخورد شما با موفقیت ارسال شد!",
                     position: 'bottomLeft'
                 });
+                $("form#feedback_ajax_form")[0].reset();
+                $("#feedbackModal").modal("hide");
             },
             error: function (data) {
                 console.log(data);
