--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -159,7 +159,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group RGroup__form-item">
-                                        <label for="id_phone_number">ام پژوهشکده/مرکز تابعه</label>
+                                        <label for="id_phone_number">نام پژوهشکده/مرکز تابعه</label>
                                         {% if researchGroup_form.subordinateResearch.errors %}
                                             {% render_field researchGroup_form.subordinateResearch class+="w-100 error" %}
                                         {% else %}
