--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -226,9 +226,9 @@
                             <div class="col-lg-12 text-right">
                                 <span class="sub-header">پروژه شما به چه مقدار بودجه نیاز دارد؟</span>
                                 {% if form.required_budget.errors %}
-                                    {% render_field form.required_budget class="error w-100" rows="4" dir="rtl"  style="margin-top: 0" %}
+                                    {% render_field form.required_budget class="error w-100" rows="4"  style="margin-top: 0;direction: rtl" %}
                                 {% else %}
-                                    {% render_field form.required_budget class="w-100" rows="4" dir="rtl"  style="margin-top: 0" %}
+                                    {% render_field form.required_budget class="w-100" rows="4"  style="margin-top: 0;direction: rtl" %}
                                 {% endif %}
                                 <div class="error">
                                     <span class="error-body"> {% render_field form.required_budget.errors %} </span>
