--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1135,7 +1135,7 @@ div.account_error {
     top: 12px;
     right: 30px;
     color: rgb(141, 141, 141);
-    padding: 0 10px;
+    padding: 0;
     z-index: 1;
 }
 
